🎡🌖 Checkpoint ./client/index.html:27621106/148

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 <head>
   <!-- Meta Properties -->
   <meta charset="UTF-8">
-  <title>Arras TX!</title>
+  <title>Arras TX: Developer Server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <!-- CSS -->
   <link rel="stylesheet" href="/main.css" />
@@ -64,12 +64,12 @@
           <div class="sliderHolder">
             <div class="slider" id="startMenuSlidingContent">
               <center><img src="https://github.com/nepphhh/arrasio/blob/master/arrasio/src/client/favicons/favicon-96x96.png?raw=true" /></center>
-              <h1>Arras TX</h1>
+              <h1>Arras TX: Developer Server</h1>
               <div id="serverName">
                 <h4 class="nopadding">Connecting...</h4>
               </div>
               <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="This is the tale of:" id="playerNameInput" maxlength="24" />
-              <input type="text" class="conceal" tabindex="3" placeholder="Token leave blank if not beta tester, use locket4321 to enter the game!" id="playerKeyInput" maxlength="64" />
+              <input type="text" class="conceal" tabindex="3" placeholder="Token Required" id="playerKeyInput" maxlength="64" />
             </div>
             <div class="slider" id="startMenuSlidingTrigger">
               <h3 class="nopadding">view options/help 🡲</h3>
