--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,7 @@
           <div class="sliderHolder">
             <div class="slider" id="startMenuSlidingContent">
               <center><img src="https://github.com/nepphhh/arrasio/blob/master/arrasio/src/client/favicons/favicon-96x96.png?raw=true" /></center>
-              <h1>tx: Developer Server</h1>
+              <h1>Arras TX: Developer Server</h1>
               <div id="serverName">
                 <h4 class="nopadding">Connecting...</h4>
               </div>
