--- a/client/changelog.html
+++ b/client/changelog.html
@@ -11,8 +11,15 @@
 
 <style type="text/css">
   #mainBody {
-    background: none;
-    background-color: transparent;
+    background: #484848;
+    background-color: #484848;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  html,
+  body,
+  canvas {
+  background: lightgrey
   }
 </style>
 
